--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.3",
+    "material-bread": "^0.2.10",
     "native-base": "^2.15.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -33,6 +34,7 @@
     "react-native-elements": "^2.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-hide-show-password-input": "^1.1.0",
+    "react-native-modal": "^12.0.3",
     "react-native-modalbox": "^2.0.2",
     "react-native-paper": "^4.5.0",
     "react-native-reanimated": "~1.13.0",
