--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^9.1.2",
     "formik": "^2.2.3",
     "material-bread": "^0.2.10",
     "native-base": "^2.15.0",
@@ -46,6 +47,10 @@
     "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
