--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-location": "~12.1.2",
     "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
-    "firebase": "^9.1.2",
+    "firebase": "8.2.3",
     "formik": "^2.2.3",
     "material-bread": "^0.2.10",
     "native-base": "^2.15.0",
