--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^5.3.13",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^5.12.8",
+    "@reduxjs/toolkit": "^1.6.2",
     "expo": "^42.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-constants": "~11.0.1",
@@ -49,6 +50,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "yup": "^0.29.3"
