--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.0",
     "reselect": "^4.0.0",
     "yup": "^0.29.3"
   },
