--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "babel-preset-expo": "8.3.0",
     "react-native-bundle-visualizer": "^2.2.1"
   },
+    "resolutions": {
+    "react-devtools-core": "^4.11.0"
+  },
   "private": true
 }
