--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.6.2",
     "expo": "^42.0.0",
-    "expo-app-loading": "^1.0.1",
+    "expo-app-loading": "1.1.2",
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
@@ -63,7 +63,7 @@
     "babel-preset-expo": "8.3.0",
     "react-native-bundle-visualizer": "^2.2.1"
   },
-    "resolutions": {
+  "resolutions": {
     "react-devtools-core": "^4.11.0"
   },
   "private": true
