--- a/package.json
+++ b/package.json
@@ -1,70 +1,76 @@
 {
+  "name": "new_pisri",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
+    "storybook": "start-storybook -p 7007",
+    "prestorybook": "rnstl",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@expo-google-fonts/public-sans": "^0.1.0",
-    "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/material-top-tabs": "^5.3.13",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^5.12.8",
-    "@reduxjs/toolkit": "^1.6.2",
-    "expo": "^42.0.0",
-    "expo-app-loading": "1.1.2",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-image-picker": "~10.2.2",
-    "expo-location": "~12.1.2",
-    "expo-permissions": "~12.1.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
-    "formik": "^2.2.3",
-    "material-bread": "^0.2.10",
-    "native-base": "^2.15.0",
-    "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-animatable": "^1.3.3",
-    "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-hide-show-password-input": "^1.1.0",
-    "react-native-modal": "^12.0.3",
-    "react-native-modalbox": "^2.0.2",
-    "react-native-paper": "^4.5.0",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-responsive": "^1.0.2",
-    "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
-    "react-native-tab-view": "^2.15.2",
-    "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.5",
-    "redux": "^4.1.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.4.0",
-    "reselect": "^4.0.0",
-    "yup": "^0.29.3"
+    "@expo-google-fonts/public-sans": "^0.2.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "expo": "^48.0.0",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "^0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "prettier": "^2.8.4",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-loader": "^8.2.2",
-    "babel-preset-expo": "8.3.0",
-    "react-native-bundle-visualizer": "^2.2.1"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.21.0",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.27",
+    "@storybook/react-native-server": "^5.3.23",
+    "@typescript-eslint/parser": "^5.53.0",
+    "babel-loader": "^8.3.0",
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.7",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.8",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "react-dom": "18.2.0",
+    "react-native-storybook-loader": "^2.0.5"
   },
-  "resolutions": {
-    "react-devtools-core": "^4.11.0"
-  },
-  "private": true
+  "private": true,
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./Components/"
+      ],
+      "pattern": "**/*.stories.tsx",
+      "outputFile": "./storybook/storyLoader.js"
+    }
+  }
 }
