--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/public-sans": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
     "expo": "^48.0.0",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.1",
@@ -28,6 +25,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-svg": "^13.8.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
@@ -61,7 +59,8 @@
     "eslint-plugin-storybook": "^0.6.8",
     "eslint-plugin-unused-imports": "^2.0.0",
     "react-dom": "18.2.0",
-    "react-native-storybook-loader": "^2.0.5"
+    "react-native-storybook-loader": "^2.0.5",
+    "react-native-svg-transformer": "^1.0.0"
   },
   "private": true,
   "config": {
