--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "^13.8.0",
+    "react-native-svg": "13.4.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
