--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,20 +15,20 @@
     "baseUrl": "./",
     "paths": {
       "*": ["node_modules/*"],
-      "@components/*": ["./Components/*"],
-      "@buttons/*": ["./Components/basic/buttons/*"],
+      "@components/*": ["./UI/Components/*"],
+      "@buttons/*": ["./UI/Components/basic/buttons/*"],
       // "@containers/*": ["src/renderer/ui/containers/*"],
-      "@Screens/*": ["./Components/Screens/*"],
+      "@Screens/*": ["./UI/Components/Screens/*"],
       "@assets/*": ["./assets/*"],
       // "@libs/*": ["src/renderer/libs/*"],
-      "@config/*": ["./Components/config/*"],
+      "@config/*": ["./UI/Components/config/*"],
       // "@helpers/*": ["src/renderer/utils/helpers/*"],
-      // "@models/*": ["src/renderer/models/*"],
+      "@modals/*": ["./UI/modals/*"],
       "@toSvg/*": ["./assets/svg/*"],
       "@toPng/*": ["./assets/pictures/*"],
       "@api/*": ["./API/*"],
       "@redux/*": ["./services/redux/*"],
-      "@colors": ["./Components/config/Colors.ts"],
+      "@colors": ["./UI/Components/config/Colors.ts"],
       "@stores/*": ["./services/zustand/*"]
     }
   },
