--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-svg": "13.4.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
