--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,13 @@
       "*": ["node_modules/*"],
       "@components/*": ["./UI/Components/*"],
       "@buttons/*": ["./UI/Components/basic/buttons/*"],
-      // "@containers/*": ["src/renderer/ui/containers/*"],
+      "@containers/*": ["UI/containers/*"],
       "@Screens/*": ["./UI/Components/Screens/*"],
       "@assets/*": ["./assets/*"],
       // "@libs/*": ["src/renderer/libs/*"],
       "@config/*": ["./UI/Components/config/*"],
       // "@helpers/*": ["src/renderer/utils/helpers/*"],
-      "@modals/*": ["./UI/modals/*"],
+      "@modals/*": ["./UI/containers/modals/*"],
       "@toSvg/*": ["./assets/svg/*"],
       "@toPng/*": ["./assets/pictures/*"],
       "@api/*": ["./API/*"],
