➕ add navigation folder and paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "*": ["node_modules/*"],
       "@components/*": ["./UI/Components/*"],
       "@buttons/*": ["./UI/Components/basic/buttons/*"],
-      "@containers/*": ["UI/containers/*"],
+      "@containers/*": ["./UI/containers/*"],
+      "@navigation/*": ["./navigation/*"],
       "@Screens/*": ["./UI/Components/Screens/*"],
       "@assets/*": ["./assets/*"],
       // "@libs/*": ["src/renderer/libs/*"],
