--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "@buttons/*": ["./UI/Components/basic/buttons/*"],
       "@containers/*": ["./UI/containers/*"],
       "@navigation/*": ["./navigation/*"],
-      "@screens/*": ["./UI/Components/Screens/*"],
+      "@screens/*": ["./UI/screens/*"],
       "@assets/*": ["./assets/*"],
       // "@libs/*": ["src/renderer/libs/*"],
       "@config/*": ["./UI/Components/config/*"],
