--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "new_pisri",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "cleanStart": "expo start -c   ",
@@ -25,6 +24,7 @@
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
