--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
+    "firebase": "8.2.3",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
