--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
