--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "expo": "^48.0.0",
     "expo-constants": "^14.2.1",
+    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.1",
     "expo-status-bar": "~1.4.4",
