--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "expo-constants": "^14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
-    "expo-splash-screen": "^0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
     "prettier": "^2.8.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
